--- a/weblayout/13_javascript/css/style.css
+++ b/weblayout/13_javascript/css/style.css
@@ -81,6 +81,7 @@
 
 .body {
 	font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 *,
@@ -149,6 +150,7 @@
 }
 
 .container {
+  position: relative;
 	max-width: 1800px;
   padding: 0 15px;
 	margin: 0 auto;
@@ -178,6 +180,7 @@
 .nav-header {
 	display: flex;
 	align-items: center;
+  min-width: 790px;
 }
 
 .nav-header__list {
@@ -211,10 +214,98 @@
 }
 
 .search-button {
+  height: max-content;
+  align-self: center;
 	border-style: none;
 	background: none;
 	cursor: pointer;
 	padding: 0;
+}
+.search {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  max-width: 539px;
+  transition: visibility 0.3s ease-in-out, transform 0.3s ease-in-out;
+  padding: 16px 13px 16px 31px;
+  background-color: var(--color-white);
+  border-radius: 16px;
+  border:rgba(0, 0, 0, 0.12);
+  visibility: hidden;
+  transform: translateY(-200%);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
+}
+
+.search__send {
+  padding: 2px 12px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.search__send-svg rect,
+.search__send-svg path {
+  transition: fill 0.5s ease-in-out, stroke 0.5s ease-in-out;
+}
+.search__send-svg:hover rect,
+.search__send-svg:active rect {
+	fill: var(--color-yellow);
+}
+
+.search__send-svg:hover path,
+.search__send-svg:active path {
+	stroke: var(--color-yellow);
+}
+.search__input:focus {
+  outline: none;
+}
+
+.search__close {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.search__close-svg rect,
+.search__close-svg circle {
+  transition: fill 0.5s ease-in-out, stroke 0.5s ease-in-out;
+}
+.search__close-svg:hover rect {
+	fill: var(--color-yellow);
+}
+
+.search__close-svg:hover circle {
+	stroke: var(--color-yellow);
+}
+.search__close-svg:active rect {
+  fill: #000;
+}
+.search__close-svg:active circle {
+  stroke: #000;
+}
+.search--open {
+  visibility: visible;
+  transform: none;
+}
+.search__form {
+  display: flex;
+  width: 100%;
+}
+
+.search__input {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #DCDCDC;
+  background-color: transparent;
+  margin-right: 14px;
+}
+.search__input::placeholder {
+  color: #ADADAD;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 22px;
 }
 
 .nav-header__list-item {
@@ -247,13 +338,13 @@
 
 /* slider */
 .slider-section {
+  position: relative;
   margin-bottom: 100px;
 }
 .slider {
-	background-image: url(../img/low-angle-photo-of-balconies-24620151.jpg);
-	background-repeat: no-repeat;
-  background-size: cover;
   padding: 100px 80px;
+  position: relative;
+  z-index: 5;
 }
 
 .slider__title {
@@ -288,6 +379,38 @@
   background: #E1670E;
 }
 
+.slider-section .swiper {
+  position: absolute;
+  left: 50%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: calc(100% - 30px);
+  transform: translateX(-50%);
+}
+.swiper-slide {
+  background-size: cover;
+}
+
+.slider__pag.swiper-pagination {
+  position: absolute;
+  left: 0;
+  bottom: 30px;
+  width: 100%;
+  height: 15px;
+  z-index: 6;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin-right: 10px;
+}
+.swiper-pagination-bullet {
+  width: 15px;
+  height: 15px;
+  background: #E5E5E5;
+}
+
 .burger {
   position: relative;
   width: 30px;
@@ -307,6 +430,22 @@
   height: 2px;
   background-color: var(--color-dark-gray);
   transform: translateY(-50%);
+  transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out, background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.burger:active:not(.active):after {
+  width: 60%;
+}
+.burger:active:not(.active) .burger__line {
+  width: 80%;
+}
+.burger:hover:after,
+.burger:hover:before,
+.burger:hover .burger__line {
+ background-color: var(--color-yellow);
+}
+.burger.active .burger__line {
+  transform: scale(0);
 }
 .burger::before,
 .burger::after {
@@ -316,12 +455,28 @@
   width: 100%;
   height: 2px;
   background-color: var(--color-dark-gray);
+  transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out, background-color 0.3s ease-in-out, width 0.3s ease-in-out;
 }
 .burger::before{
   top: 0;
 }
 .burger::after {
   bottom: 0;
+}
+.burger-active .burger__line {
+  opacity: 0;
+}
+.burger-active::before {
+  top: 50%;
+  transform: rotate(45deg);
+}
+.burger-active::after {
+  top: 50%;
+  bottom: auto;
+  transform: rotate(-45deg);
+}
+.stop-scroll {
+  overflow: hidden;
 }
 /* about us*/
 .about-us {
@@ -389,23 +544,20 @@ margin-bottom: 100px;
 }
 
 .about-us__card-two {
-	background-image: url(../img/Frame16.svg);
-	background-repeat: no-repeat;
-	background-position: 60px 65px;
 	display: flex;
 	border: 1px solid var(--color-light-gray);
-	padding: 61px 110px 65px 300px;
+	padding: 65px 110px 62px 60px;
 	margin-bottom: 32px;
 
 }
 
 .about-us__card-three {
-	background-image: url(../img/Frame12.svg);
-	background-repeat: no-repeat;
-	background-position: 60px 65px;
 	display: flex;
 	border: 1px solid var(--color-light-gray);
-	padding: 61px 110px 65px 300px;
+	padding: 65px 110px 60px 60px;
+}
+.about-us__img {
+  margin-right: 50px;
 }
 .about-us__card-text {
   line-height: 30px;
@@ -417,14 +569,25 @@ margin-bottom: 100px;
 }
 
 .about-us__card {
+  display: flex;
 	min-width: 100%;
 	min-height: 165px;
+}
+.about-us__pic {
+  align-self: center;
 }
 
 /* how we work*/
 .how-we-work {
   margin-bottom: 101px;
 }
+.how-we-work__tab-item {
+  display: none;
+}
+.how-we-work__tab-item--active {
+  display: block;
+}
+
 .how-we-work__heading {
 	margin-bottom: 50px;
 }
@@ -453,7 +616,7 @@ margin-bottom: 100px;
 }
 
 .how-we-work__step-number:focus {
-	border: 2px solid var(--color-yellow);
+	outline: 2px solid var(--color-yellow);
 	color: var(--color-dark-gray);
 }
 
@@ -516,6 +679,27 @@ margin-bottom: 100px;
 }
 
 /*FAQ*/
+.faq__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 15px 0;
+  transition: color 0.3s ease-in-out;
+}
+
+.faq__bottom {
+  padding-bottom: 20px;
+}
+
+.faq__button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  transition-property: transform;
+  transition: 0.3s ease-in-out;
+}
+
 .faq__heading {
 	margin-bottom: 43px;
 }
@@ -525,21 +709,29 @@ margin-bottom: 100px;
 }
 
 .faq__list {
+  cursor: pointer;
   color: var(--color-dark-gray);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 15px 0;
-	border-top: 1px solid var(--color-light-gray);
-	border-bottom: 1px solid var(--color-light-gray);
-	margin-bottom: -1px;
-	position: relative;
+  flex-wrap: wrap;
 	font-size: 24px;
 	line-height: 32px;
-  transition: color 0.5s ease-in-out, border-color 0.5s ease-in-out;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid var(--color-light-gray);
+  margin-top: -1px;
+  transition: color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
+.faq__list:first-child {
+  border-top: 1px solid var(--color-light-gray);
+}
+
+.ui-accordion-header-active .faq__button {
+  transform: rotate(45deg);
+  transition: transform 0.3s ease-in-out;
+}
 
 .faq__list:hover,
 .faq__list:focus {
@@ -547,6 +739,26 @@ margin-bottom: 100px;
 	border-color: var(--color-yellow);
 	color: var(--color-yellow);
 	outline: none;
+}
+.faq__top:focus-visible {
+  outline: none;
+}
+.faq__top:hover .faq__top:focus-visible {
+  position: relative;
+  z-index: 1;
+	color: var(--color-yellow);
+}
+.faq__top.ui-state-active + .faq__button {
+  transform: rotate(45deg);
+}
+.faq__top.ui-state-active + .faq__bottom {
+  position: relative;
+  z-index: 1;
+}
+.faq__text {
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-dark-gray);
 }
 
 .faq__list path,
